--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <script src="./Challenges/09-array-methods.js"></script>
     <!--you place the lowest file at the bottom when using multiple files
     so the browser can render the data-->
+
+    <!--this is a multiple file method before ES6 -->
 </body>
 </html>
